https://bugs.webkit.org/show_bug.cgi?id=136650 Rubber-banding in the DOM view of the WebInspector is really jumpy -and corresponding- rdar://problem/18166043

Reviewed by Darin Adler.

This patch implements the ScrollableArea virtual function isRubberBandInProgress()
for RenderLayer, and then uses that to determine whether to clamp the scroll
position in updateScrollInfoAfterLayout().
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::isRubberBandInProgress):
(WebCore::RenderLayer::updateScrollInfoAfterLayout):
* rendering/RenderLayer.h:



Canonical link: https://commits.webkit.org/154528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173484 268f45cc-cd09-0410-ab3c-d52691b4dbfc